# gin

./: Cargo.toml  readme.md
docs/: parity.md
scripts/: conformance.py  run_pytests_with_rust.py
tonic-bench/: Cargo.toml
tonic-bench/benches/: frame_bench.rs  time_surface_bench.rs  voxel_grid_bench.rs
tonic-core/: Cargo.toml
tonic-core/src/: events.rs  lib.rs  waist.rs
tonic-core/src/kernels/: averaged_time_surface.rs  crop.rs  decimate.rs  denoise.rs  downsample.rs  drop_ops.rs  flip.rs  frame.rs  mod.rs  refractory_period.rs  spatial.rs  time_ops.rs  time_surface.rs  voxel_grid.rs
tonic-core/src/slicers/: mod.rs  slicers.rs
tonic-core/tests/: averaged_time_surface.rs  crop.rs  decimate.rs  denoise.rs  downsample.rs  drop_pixel.rs  flip.rs  frame.rs  time_reverse.rs  time_surface.rs  voxel_grid.rs
tonic-python/: Cargo.toml  build.rs  pyproject.toml
tonic-python/src/: lib.rs
